# focused-list-machines

./: .gitignore  README.md  focused-list-machines.cabal
libsrc/: FocusedListMachine.lhs  FocusedListMachinePrograms.lhs
libsrc/Data/Functor/: Pairing.lhs
libsrc/Language/: DSLInterpreterPairing.lhs
