name:                focused-list-machines
version:             0.0.0
synopsis:            Languages for index-centric manipulation of lists
description:         Various state machines maintaining a list and operated through Domain Specific Languages that let the user build and edit the list in terms of focuses. Commands include moving the focus, inserting and deleting entries relative to the focus, setting the contents of the focal entry to a supplied value, and things like that.
homepage:            https://github.com/runKleisli/focused-list-machines
license:             OtherLicense
license-file:        LICENSE.txt
author:              Rand Kleisli
maintainer:          runKleisli@openmailbox.org
category:            DSL
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
    FocusedListMachine
    Data.Functor.Pairing
    Language.DSLInterpreterPairing
  build-depends:
    base > 4.5 && < 5,
    free,
    comonad,
    adjunctions,
    vinyl >= 0.6
  hs-source-dirs: libsrc
  ghc-options: -Wall -Wno-tabs
  default-language: Haskell2010

executable Example
  main-is: Example.hs
  other-modules:
    FocusedListMachine
  hs-source-dirs: libsrc, src
  ghc-options: -Wall -Wno-tabs -rtsopts -O2

  build-depends:
    base > 4.5 && < 5,
    free,
    comonad,
    adjunctions,
    vinyl >= 0.6
  default-language: Haskell2010
